Fix emoji spacing on Ubuntu/Firefox

--- a/app/styles/_emoji-tiles.scss
+++ b/app/styles/_emoji-tiles.scss
@@ -29,7 +29,6 @@ $emoji-font-size: 6rem;
   @extend .emoji-text;
   font-size: $emoji-font-size;
   float: left;
-  letter-spacing: -0.7em;
 }
 
 .emoji-name {
