--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -65,4 +65,5 @@ footer {
 
 .no-emoji .emoji-text {
   font-family: "Android Emoji", "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "DejaVu Sans", "OpenSansEmoji", "Arial Unicode MS", "EmojiSymbols", Symbola;
+  letter-spacing: -0.7em;
 }
